day04/minio-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio-ns
  labels:
    app: minio
