day04/minio-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minio-ns
  labels:
    app: minio
    name: minio-hsvc
spec:
  clusterIP: None
  selector: 
    name: minio-po
    app: minio
  ports:
  - name: api-port
    port: 9000
    targetPort: 9000
  - name: console-port
    port: 9090
    targetPort: 9090

---
apiVersion: v1
kind: Service 
metadata:
  name: minio-svc
  namespace: minio-ns
  labels:
    app: minio
    name: minio-svc
spec:
  type: ClusterIP
  selector:
    app: minio
    name: minio-po
  ports:
  - name: api-port
    port: 9000
    targetPort: 9000
  - name: console-port
    port: 9090
    targetPort: 9090
